[gd_scene load_steps=18 format=3 uid="uid://cuxnotubpgl5d"]

[ext_resource type="Script" path="res://Personagens/Protagonista/protagonista.gd" id="1_ap2lf"]
[ext_resource type="Texture2D" uid="uid://66h38kce76sa" path="res://Imagens/0x72_DungeonTilesetII_v1.7.png" id="2_qgx83"]
[ext_resource type="Texture2D" uid="uid://cvcq6fbcifh5s" path="res://Ups/DMG.png" id="3_nw35p"]
[ext_resource type="Script" path="res://Personagens/Protagonista/ups.gd" id="3_rj2wg"]
[ext_resource type="Texture2D" uid="uid://cmjqoj1gpu2ov" path="res://Ups/HP.png" id="4_3e5dt"]
[ext_resource type="Texture2D" uid="uid://bgje0ssoxwc35" path="res://Ups/SPEED.png" id="5_y2tqg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_skxg8"]
atlas = ExtResource("2_qgx83")
region = Rect2(128, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l0jk"]
atlas = ExtResource("2_qgx83")
region = Rect2(144, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ye8k"]
atlas = ExtResource("2_qgx83")
region = Rect2(176, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p4ms"]
atlas = ExtResource("2_qgx83")
region = Rect2(192, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6vbo"]
atlas = ExtResource("2_qgx83")
region = Rect2(208, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e56ap"]
atlas = ExtResource("2_qgx83")
region = Rect2(224, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh1w8"]
atlas = ExtResource("2_qgx83")
region = Rect2(240, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqyvw"]
atlas = ExtResource("2_qgx83")
region = Rect2(160, 32, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hajwu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skxg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l0jk")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ye8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p4ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6vbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e56ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh1w8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqyvw")
}],
"loop": false,
"name": &"desvio",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2c1j"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c17tq"]
size = Vector2(18, 20)

[node name="Protagonista" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_ap2lf")
metadata/Hp = 4
metadata/MaxHp = 4
metadata/Dano = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_hajwu")
animation = &"desvio"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_y2c1j")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_c17tq")

[node name="Ups" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_rj2wg")

[node name="DMGUp" type="Sprite2D" parent="Ups"]
position = Vector2(770, 206)
texture = ExtResource("3_nw35p")

[node name="Label" type="Label" parent="Ups/DMGUp"]
offset_left = -61.0
offset_top = 65.0
offset_right = 85.0
offset_bottom = 88.0
text = "Aumenta dano"

[node name="ColorRect" type="ColorRect" parent="Ups/DMGUp"]
show_behind_parent = true
offset_left = -69.0
offset_top = -42.0
offset_right = -29.0
offset_bottom = -2.0
scale = Vector2(4.76307, 6.11333)
color = Color(0, 0.788235, 0.568627, 0.796078)

[node name="Button" type="Button" parent="Ups/DMGUp"]
modulate = Color(1, 1, 1, 0)
offset_left = -68.0
offset_top = -41.0
offset_right = 119.0
offset_bottom = 204.0

[node name="HPUp" type="Sprite2D" parent="Ups"]
position = Vector2(550, 206)
texture = ExtResource("4_3e5dt")

[node name="Label" type="Label" parent="Ups/HPUp"]
offset_left = -61.0
offset_top = 65.0
offset_right = 85.0
offset_bottom = 88.0
text = "Aumenta Hp maximo"

[node name="ColorRect" type="ColorRect" parent="Ups/HPUp"]
show_behind_parent = true
offset_left = -69.0
offset_top = -42.0
offset_right = -29.0
offset_bottom = -2.0
scale = Vector2(4.76307, 6.11333)
color = Color(0, 0.788235, 0.568627, 0.796078)

[node name="Button" type="Button" parent="Ups/HPUp"]
modulate = Color(1, 1, 1, 0)
offset_left = -67.0
offset_top = -42.0
offset_right = 120.0
offset_bottom = 200.0

[node name="MOVUp" type="Sprite2D" parent="Ups"]
position = Vector2(330, 206)
texture = ExtResource("5_y2tqg")

[node name="Label" type="Label" parent="Ups/MOVUp"]
offset_left = -61.0
offset_top = 65.0
offset_right = 85.0
offset_bottom = 88.0
text = "Aumenta a quantidade
de movimentos por
turno"

[node name="ColorRect" type="ColorRect" parent="Ups/MOVUp"]
show_behind_parent = true
offset_left = -69.0
offset_top = -42.0
offset_right = -29.0
offset_bottom = -2.0
scale = Vector2(4.76307, 6.11333)
color = Color(0, 0.788235, 0.568627, 0.796078)

[node name="Button" type="Button" parent="Ups/MOVUp"]
modulate = Color(1, 1, 1, 0)
offset_left = -69.0
offset_top = -44.0
offset_right = 123.0
offset_bottom = 201.0

[connection signal="acabou_acao" from="." to="." method="_on_acabou_acao"]
[connection signal="level_up" from="." to="Ups" method="_on_protagonista_level_up"]
[connection signal="matou" from="." to="." method="_on_matou"]
[connection signal="xp_aumentou" from="." to="." method="_on_xp_aumentou"]
[connection signal="pressed" from="Ups/DMGUp/Button" to="Ups" method="_on_button_pressed" binds= ["dmg"]]
[connection signal="pressed" from="Ups/HPUp/Button" to="Ups" method="_on_button_pressed" binds= ["hp"]]
[connection signal="pressed" from="Ups/MOVUp/Button" to="Ups" method="_on_button_pressed" binds= ["mov"]]
